postal api done

--- a/index.html
+++ b/index.html
@@ -53,27 +53,14 @@
             <p>Time Zone: <span id="time"></span></p>
             <p>Date And Time: <span id="date"></span></p>
             <p>Pincode: <span id="pin"></span></p>
-            <p>Message: Number of pincode(s) found: <span id="noOfPost"></span></p>
+            <p>Message: <span id="noOfPost"></span></p>
         </div>
         <h1 id="headings">Post Offices Near You</h1>
         <div class="searchBox">
             <input type="text" name="" id="searchBox" placeholder="Search By Name">
         </div>
-        <div class="card">
-            <div id="box1">
-                <p>Name</p>
-                <p>Branch Type</p>
-                <p>Delivery Status</p>
-                <p>District</p>
-                <p>Division</p>
-            </div>
-            <div id="box2">
-                <p>Name</p>
-                <p>Branch Type</p>
-                <p>Delivery Status</p>
-                <p>District</p>
-                <p>Division</p>
-            </div>
+        <div class="grid-container" id="card">
+
         </div>
     </div>
 
