search by name updated

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <h1 id="headings">Post Offices Near You</h1>
         <div class="searchBox">
-            <input type="text" name="" id="searchBox" placeholder="Search By Name">
+            <input type="text" name="" onkeyup="searchPost();" id="searchBox" placeholder="&#xF002; Search By Name">
         </div>
         <div class="grid-container" id="card">
 
