--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
         </div>
         <h1 id="headings">Post Offices Near You</h1>
         <div class="searchBox">
+            <i class="fa-regular fa-magnifying-glass"></i>
             <input type="text" name="" onkeyup="searchPost();" id="searchBox" placeholder="&#xF002; Search By Name">
         </div>
         <div class="grid-container" id="card">
 
         </div>
     </div>
-
+    <script src="https://kit.fontawesome.com/591c524be6.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
